[package]
name = "nuke_av1"
version = "1.0.5"
edition = "2024"
build = "build.rs"

[lib]
name = "NukeAV1"
crate-type = ["cdylib"]

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
mp4 = "0.14"
webm-iterable = "0.6"

yuv = "0.1"
libc = "0.2"

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
vcpkg = "0.2.15"
zip = "8.6.0"
